@startuml

title __REPOSITORY's Class Diagram__\n

  namespace it.almaviva.eai.zeebe.usertask.data.repository {
    interface it.almaviva.eai.zeebe.usertask.data.repository.SpringDataUserTaskRepository {
        {abstract} + findAllByAssignee()
        {abstract} + findAllDemandable()
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask.data.repository {
    class it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository {
        + assign()
        + delete()
        + disclaim()
        + findAll()
        + findAllByAssignee()
        + findAllDemandable()
        + findByKey()
        + save()
    }
  }
  

  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository .up.|> it.almaviva.eai.zeebe.usertask.port.outgoing.ITaskPort
  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository o-- it.almaviva.eai.zeebe.usertask.data.mapper.ITaskMapper : iTaskMapper
  it.almaviva.eai.zeebe.usertask.data.repository.UserTaskRepository o-- it.almaviva.eai.zeebe.usertask.data.repository.SpringDataUserTaskRepository : springDataUserTaskRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
